FIX: fix top navbar alignment

--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -65,7 +65,14 @@
   display: flex;
   &.flex-center {
     justify-content: center;
+    justify-content: center;
+    align-items: center;
   }
+}
+
+.clearfix {
+  float: unset !important;
+  clear: both !important;
 }
 
 // *********** GRID ***********
